white screen issue solve

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Prs96.github.io/portfolio-website",
+  "homepage": "https://Prs96.github.io/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
